# UAV_Link_Sim

./: UAV_Link_Sim.sln  results_summary.xlsx  run_tests.ps1  tmp_patch_ofdm.ps1  tmp_test.ps1
QML/: CMakeLists.txt  Main.qml  backend.cpp  backend.h  main.cpp
UAV_Link_Sim/: UAV_Link_Sim.vcxproj  UAV_Link_Sim.vcxproj.filters  channel.cpp  channel.h  coding.cpp  coding.h  common_defs.h  file_transfer.cpp  file_transfer.h  frequency_hop.cpp  frequency_hop.h  main.cpp  modulation.cpp  modulation.h  ofdm_link.cpp  ofdm_link.h  radio_awgn.cpp  radio_if.h  radio_loopback.cpp  radio_usrp.cpp  receiver.cpp  receiver.h  role_runner.cpp  role_runner.h  sim_runner.cpp  sim_runner.h  spread_spectrum.cpp  spread_spectrum.h  sync.cpp  sync.h  transmitter.cpp  transmitter.h  usrp_driver.cpp  usrp_driver.h  utils.cpp  utils.h
UAV_Qt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
